Disable info-block margins in split view when in responsive mode

--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,10 @@ a:any-link {
 		display: flex;
 		flex-flow: column;
 	}
+	
+	.split-view .info-block {
+		margin: 10px 0 !important;
+	}
 }
 
 /** end info responsive **/
